Bug 503310 - "Play Audio CD with Amarok" option from Disks & Devices applet opens Amarok, but Amarok does not play the disc
Summary: "Play Audio CD with Amarok" option from Disks & Devices applet opens Amarok, ...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/CD (other bugs)
Version First Reported In: 3.2.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-24 20:55 UTC by Patrick Silva
Modified: 2025-07-19 21:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-04-24 20:55:36 UTC
STEPS TO REPRODUCE
1. install Amarok on a linux system with KDE Plasma DE
2. insert an audio CD and wait until the system recognizes the disc
3. click on Disks & Devices applet in the system tray of KDE Plasma
4. click on "Audio CD"
5. choose "Play Audio CD with Amarok" option

OBSERVED RESULT
Amarok opens but it does not play the disc

EXPECTED RESULT
Amarok opens and plays the disc

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Tuomas Nurmi 2025-04-30 12:58:15 UTC
Thank you for the report!
I suspect this is a case of missing kio_audiocd5, as described e.g. on https://bugs.kde.org/show_bug.cgi?id=491594
I'm not sure if it is supported to have both KF6 and KF5 kio_audiocd installed on Arch, but the whole issue will disappear at least when changing to Qt6/KF6 based Amarok 3.3 (currently beta).
Comment 2 Patrick Silva 2025-04-30 13:49:08 UTC
I have just installed this Qt6 version on my system
https://aur.archlinux.org/packages/amarok-qt6

And the bug persists.
Comment 3 Tuomas Nurmi 2025-05-01 18:25:48 UTC
Ok, that's interesting to hear, thank you for testing. Just to confirm, you have https://archlinux.org/packages/extra/x86_64/audiocd-kio/ installed, right?
Comment 4 Patrick Silva 2025-05-01 18:35:11 UTC
Yes, audiocd-kio 25.04.0-1 package is installed. I can play the audio CD once Amarok is open by adding the tracks to the playlist and then double-clicking on any of them. But the CD does not play after the provided steps.
Comment 5 Tuomas Nurmi 2025-05-01 18:38:33 UTC
Ah, okay. Thank you for the extra information.
Comment 6 Tuomas Nurmi 2025-06-20 11:39:07 UTC
Tested with current gstreamer-based git master and it seems to pretty much work with the steps to reproduce. In general I feel the new gstreamer backend makes CD playback in general work better.

But I'll wait for your test results with the upcoming Qt6/gstreamer based version before closing as fixed, as there might be some environment dependent issues, and I didn't test if I could reproduce with earlier Phonon-based versions.
Comment 7 Patrick Silva 2025-07-11 11:27:26 UTC
Now I have amarok 3.3.0-1 installed on my system. After the provided steps, amarok opens minimized to the system tray but it does not add the audio cd tracks to the playlist. I need to add them and start playback manually.

Operating System: Arch Linux 
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Graphics Platform: Wayland
Comment 8 Tuomas Nurmi 2025-07-19 20:31:15 UTC
Indeed, confirming that if Amarok is not already running when choosing "Play with Amarok", then it just starts but nothing happens with CD. Will look more at some point.
Comment 9 Tuomas Nurmi 2025-07-19 21:44:15 UTC
Git commit 879c8e0b6845d68081644f69b316a7154d37c61b by Tuomas Nurmi.
Committed on 19/07/2025 at 21:43.
Pushed by nurmi into branch 'master'.

Add small delay to make --cdplay work when Amarok is not running

Without this, Amarok waits for AudioCD collection to be ready and start
playing right after its initialization completes. However, this is somewhy
still a little bit early, and nothing happens. This delay solution is somewhat
hack'ish, but perfection is somewhat rare in CD playback related things,
I have learned.

M  +1    -0    ChangeLog
M  +2    -2    src/core-impl/collections/audiocd/AudioCdCollection.cpp

https://invent.kde.org/multimedia/amarok/-/commit/879c8e0b6845d68081644f69b316a7154d37c61b