Add small delay to make --cdplay work when Amarok is not running

Without this, Amarok waits for AudioCD collection to be ready and start
playing right after its initialization completes. However, this is somewhy
still a little bit early, and nothing happens. This delay solution is somewhat
hack'ish, but perfection is somewhat rare in CD playback related things,
I have learned.

BUG: 503310